compiler/fir/analysis-tests/testData/resolve/checkers/useBeforeStaticInitialization/kt8970.kt
// RUN_PIPELINE_TILL: FRONTEND
// FIR_IDENTICAL
abstract class A(val x : Any?)
<!POSSIBLE_INITIALIZATION_DEADLOCK!>object B<!> : A(<!POTENTIALLY_UNINITIALIZED_ACCESSES!>C<!>)
<!POSSIBLE_INITIALIZATION_DEADLOCK!>object C<!> : A(<!POTENTIALLY_UNINITIALIZED_ACCESSES!>B<!>)

abstract class Base(val x: Any?)

<!POSSIBLE_INITIALIZATION_DEADLOCK!>class C1 {
    companion object : Base(<!POTENTIALLY_UNINITIALIZED_ACCESSES!>C2<!>)
}<!>

<!POSSIBLE_INITIALIZATION_DEADLOCK!>class C2 {
    companion object : Base(<!POTENTIALLY_UNINITIALIZED_ACCESSES!>C1<!>)
}<!>
